# transformer-attention

./: .gitignore  README.md  pyproject.toml
stage1_basics/: train_vit_on_cifar10.py
stage2_understanding/: README.md  mini_vit.py  patchify.py  visualize_attention.py
stage3_raj/: count.py  eval_raj_vit.py  raj_dataset.py  train_raj_vit.py
stage3_raj/torchscript/: convert_to_torchscript.py  count.py  inference_torchscript.py
vision-transformer/: train_transformer.py  transformer.md
